--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,26 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# dependencies
-node_modules
+# Dependency directories
+node_modules/
+jspm_packages/
 
-# testing
-coverage
+# Typescript v1 declaration files
+typings/
 
-# production
-build
+# Optional npm cache directory
+.npm
 
-# misc
-.DS_Store
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
 .env
-npm-debug.log
