--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "find-my-horoscope-client-v2", 
-  "version": "0.1.0",
-  "description": "A full-stack starter template",
+  "version": "0.15.0",
+  "description": "A full-stack project to demonstrate how a react-redux app should look",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
