--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,16 @@
   "version": "0.15.0",
   "description": "a full-stack project to demosntrate how a react-redux app should be setup",
   "private": true,
- 
   "dependencies": {
+    "js-cookie": "^2.1.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "0.9.5",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
