--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,18 @@
 {
   "name": "find-my-horoscope-client",
-  "version": "0.15.0",
+  "version": "0.16.0",
   "description": "a full-stack project to demosntrate how a react-redux app should be setup",
-  "private": true,
+  "private": true,"devDependencies": {
+    "react-scripts": "0.9.0"
+  },
   "dependencies": {
     "js-cookie": "^2.1.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-router-dom": "^4.1.2",
-    "react-scripts": "0.9.5",
-    "redux": "^3.6.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.0",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.6.0"
   },
@@ -21,6 +23,7 @@
     "eject": "react-scripts eject"
   },
   "engines": {
-    "node": "8.1.2"
+    "node": "7.10.0",
+    "npm": "4.2.0"
   }
 }
