--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "find-my-horoscope-client-v2",
-  "version": "0.15.0",
+  "version": "0.16.0",
   "description": "A full-stack project to demonstrate how a react-redux app should look",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
+    "superagent": "^3.6.1",
     "xp": "^1.0.1"
   }
 }
