--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "find-my-horoscope-server",
-  "version": "0.10.0",
+  "version": "0.16.0",
   "description": "Server portion of a full-stack react-redux app",
   "main": "index.js",
   "engines": {
@@ -12,15 +12,20 @@
   "author": "Jaha Naeem Gitonga <blackb8r@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "express-validator": "^4.2.1",
+    "jsonwebtoken": "^8.0.1",
     "mongoose": "^4.11.1",
     "morgan": "^1.8.2",
     "nodemon": "^1.11.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^3.0.0"
   },
   "keywords": [
     "node",
