--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,8 @@
   "name": "find-my-horoscope-client",
   "version": "0.16.0",
   "description": "a full-stack project to demosntrate how a react-redux app should be setup",
-  "private": true,"devDependencies": {
-    "react-scripts": "0.9.0"
-  },
+  "private": true,
+  
   "dependencies": {
     "js-cookie": "^2.1.4",
     "react": "^15.4.2",
@@ -14,7 +13,9 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "superagent": "^3.6.0"
+    "superagent": "^3.6.0",
+    "react-scripts": "0.9.0"
+
   },
   "scripts": {
     "start": "react-scripts start",
